tests/ast_interpreter/err_logical_and_int.expected
<string>:2:5: error: expected a boolean value
    5 && true;
    ^
